# demo-driven

./: .gitignore  LICENSE  README.md  ddrun.ini  demo_driven.ini  pyproject.toml
demo/: README.md  sorting.py
demo/accepted/: hello.py  sorting.ipynb  sorting.ipynb.txt  sorting.py
demo/created/: hello.ipynb.txt  sorting.ipynb  sorting.txt
demo/fixed/: sorting.ipynb
demo/modified/: hello.html  hello.ipynb.html  hello.py.html  sorting.html  sorting.ipynb.html  sorting.py.html  sorting.txt
demo/reverted/: hello.py  sorting.ipynb  sorting.py
demo_driven/: cli.py  ddcov.py  ddnb.py  ddnbo.py  ddrun.py
showcase/: README.md  demo.sh  demo.sh.txt  nested.sh  nested.sh.txt  option_d.sh  option_d.sh.txt  unicode.py  unicode.py.txt
showcase.jupyter/: demo.sh  demo.sh.txt  option_d.sh  option_d.sh.txt
showcase.jupyter/demo/current/: hello.ipynb
showcase.jupyter/demo/fixed/: hello.ipynb
showcase.jupyter/demo/modified/: hello.ipynb.txt
showcase.jupyter/demo/reverted/: sorting.ipynb.txt
showcase/demo/: README.md
showcase/demo/accepted/: hello.ipynb
showcase/demo/created/: hello.py.txt  sorting.ipynb.txt
showcase/demo/fixed/: sorting.ipynb.txt
showcase/demo/modified/: hello.ipynb.html  hello.py.html  hello.py.txt  sorting.ipynb.html  sorting.py.html
showcase/demo/reverted/: hello.py
showcase/extension/: README.md  ddrun.ini  demo.ast.txt  demo.csv.txt  demo.dis  demo.dis.txt  demo.tok.txt  demo.yaml
showcase/nested1/: nested.sh  nested.sh.txt
showcase/nested2/: nested.sh  nested.sh.txt
