[project]
name = "demo-driven"
version = "0.1.0"
description = "A lightweight CLI tool that enables Demo-Driven Development in Python."
authors = [
    { name = "John Lin", email = "jihghong@gmail.com" },
    { name = "ChatGPT 4o" }
]
readme = "README.md"
requires-python = ">=3.7"

license = "MIT"
keywords = ["demo", "testing", "notebook", "jupyter", "refactor", "regression", "automation", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "nbformat",
    "nbclient",
    "ipykernel",
    "jupytext",
    "coverage",
    "bashlex"
]

[project.scripts]
ddrun = "demo_driven.ddrun:main"
ddnbo = "demo_driven.ddnbo:main"
ddcov = "demo_driven.ddcov:main"
tocov = "demo_driven.ddcov:tocov"

[tool.setuptools]
packages = ["demo_driven"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
